...
import com.example.awesomearchsample.core.ui.error.UiError
import com.example.awesomearchsample.domain.repo.model.RepoDetails
import com.example.awesomearchsample.feature.repo.R
import com.example.awesomearchsample.feature.repo.navigation.repodetails.RepoDetailsRoute
import com.example.awesomearchsample.feature.repo.repodetails.di.RepoDetailsScreenDependencies

const val REPO_DETAILS_SCREEN_TAG = "repo_details_screen"
const val REPO_DETAILS_LOADING_TAG = "repo_details_loading"
const val REPO_DETAILS_BACK_BUTTON_TAG = "repo_details_back_button"
const val REPO_DETAILS_NAME_TAG = "repo_details_name"
const val REPO_DETAILS_AUTHOR_TAG = "repo_details_author"
const val REPO_DETAILS_STARS_TAG = "repo_details_stars"
const val REPO_DETAILS_FORKS_TAG = "repo_details_forks"

@Composable
internal fun RepoDetailsScreen(
    route: RepoDetailsRoute,
...
