...
import com.example.awesomearchsample.core.ui.designsystem.ErrorComponent
import com.example.awesomearchsample.core.ui.error.UiError
import com.example.awesomearchsample.domain.user.model.UserDetails
import com.example.awesomearchsample.feature.user.navigation.userdetails.UserDetailsRoute
import com.example.awesomearchsample.feature.user.userdetails.di.UserDetailsScreenDependencies

const val USER_DETAILS_SCREEN_TAG = "user_details_screen"

@Composable
internal fun UserDetailsScreen(
    route: UserDetailsRoute,
    dependencies: UserDetailsScreenDependencies,
    onBack: () -> Unit
...
