...
import com.example.awesomearchsample.feature.repo.R
import com.example.awesomearchsample.feature.repo.repos.component.RepoList
import com.example.awesomearchsample.feature.repo.repos.di.ReposScreenDependencies

const val REPOS_SCREEN_TAG = "repos_screen"
const val REPOS_LOADING_TAG = "repos_loading"
const val REPOS_SEARCH_BUTTON_TAG = "repos_search_button"

@Composable
internal fun ReposScreen(
    dependencies: ReposScreenDependencies,
    onNavigateToSearch: () -> Unit,
    onNavigateToSettings: () -> Unit,
...
