...
import com.example.awesomearchsample.core.ui.error.UiError
import com.example.awesomearchsample.domain.repo.model.Repo
import com.example.awesomearchsample.domain.search.model.SearchQuery
import com.example.awesomearchsample.domain.search.model.SearchResult
import com.example.awesomearchsample.feature.search.di.SearchScreenDependencies

const val SEARCH_SCREEN_TAG = "search_screen"

@Composable
internal fun SearchScreen(
    dependencies: SearchScreenDependencies,
    onNavigateToRepoDetails: (Long) -> Unit,
    onBack: () -> Unit
...
